# dragonfly

./: .gitignore  CMakeLists.txt
src/: DragonflyConfig.hpp.in  main.cpp
src/manager/: GameManager.cpp  GameManager.hpp  LogManager.cpp  LogManager.hpp  Manager.cpp  Manager.hpp
src/math/: Vec2.cpp  Vec2.hpp
src/renderer/: RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp
src/util/: Clock.cpp  Clock.hpp  sleep.cpp  sleep.hpp  time.cpp  time.hpp
